--- a/Run.ipynb
+++ b/Run.ipynb
@@ -19,7 +19,7 @@
         "id": "a4AmxKgQuADD"
       },
       "source": [
-        "**Required Imports**"
+        "**Required Imports for the project**"
       ]
     },
     {
