Added MELD results

--- a/Run.ipynb
+++ b/Run.ipynb
@@ -176,6 +176,8 @@
         "id": "gQUHCY-Ouwly"
       },
       "source": [
+        "#Arrange the sentences such that the utterances of the same speaker are together.\n",
+        "#Input : length of conversations, data, labels Output : list of sentences, list of respective labels\n",
         "def arrange_sentences(data,data2,data3):\n",
         "  startlen=0\n",
         "  final_sentences=[]\n",
@@ -197,6 +199,8 @@
         "      final_labels.append(odd_labels[i])\n",
         "  return final_sentences,final_labels\n",
         "\n",
+        "#Converting the string from original dataset into a format easily readable by the model\n",
+        "#Input : data, labels. Output : processed data, processed respective labels\n",
         "def preprocessing(data,labels):\n",
         "  processed_data=[]\n",
         "  processed_label=[]\n",
@@ -214,7 +218,7 @@
         "      processed_label.append(j)\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -298,6 +302,8 @@
         "id": "9WQEY2YoxBXm"
       },
       "source": [
+        "#Add Sentences from ConceptNet\n",
+        "#Input : data, labels. Output : added sentences with data, added labels with labels.\n",
         "def ConceptNet_Sentences(data,labels):\n",
         "  conceptnet_data=[]\n",
         "  conceptnet_labels=[]\n",
@@ -372,6 +378,8 @@
         "id": "KT33GtO1z-YY"
       },
       "source": [
+        "#Add VADER features\n",
+        "#Input : List of sentences Output : List of sentences appended with VADER sentiments\n",
         "def add_Vader_Features(sentences):\n",
         "  vader_features=[]\n",
         "  for sentence in sentences:\n",
@@ -440,6 +448,7 @@
         "id": "UUyuovC42jyY"
       },
       "source": [
+        "#ALBERT encoding from the ALBERT paper.\n",
         "def albert_encode(texts, tokenizer, max_len=512):\n",
         "    all_tokens = []\n",
         "    all_masks = []\n",
@@ -462,6 +471,8 @@
         "        all_segments.append(segment_ids)\n",
         "    \n",
         "    return np.array(all_tokens), np.array(all_masks), np.array(all_segments)\n",
+        "\n",
+        "#Creating the Model\n",
         "def build_model(bert_layer, max_len=512):\n",
         "    input_word_ids = Input(shape=(max_len,), dtype=tf.int32, name=\"input_word_ids\")\n",
         "    input_mask = Input(shape=(max_len,), dtype=tf.int32, name=\"input_mask\")\n",
@@ -470,6 +481,7 @@
         "    pooled_output, sequence_output = bert_layer([input_word_ids, input_mask, segment_ids])\n",
         "    clf_output = pooled_output\n",
         "    out = Dense(100, activation='relu')(clf_output)\n",
+        "    out = Dense(100, activation='relu')(out)\n",
         "    out = Dense(100, activation='relu')(out)\n",
         "    out = Dense(6, activation='softmax')(out)\n",
         "    \n",
@@ -487,6 +499,7 @@
         "id": "8gHsHOgC2pkW"
       },
       "source": [
+        "#Importing pretrained ALBERT model\n",
         "module_url = \"https://tfhub.dev/tensorflow/albert_en_base/1\"\n",
         "albert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
